--- a/src/Kooco.Pikachu.Blazor.Store/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor.Store/Pages/_Host.cshtml
@@ -14,6 +14,11 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="Kooco.Pikachu.Blazor.Store.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -31,5 +36,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+
+
 </body>
 </html>
