--- a/src/Kooco.Pikachu.Blazor.Store/Pages/GroupBuyReport.razor
+++ b/src/Kooco.Pikachu.Blazor.Store/Pages/GroupBuyReport.razor
@@ -1,11 +1,11 @@
 @page "/groupbuyreport"
-@using RadzenBlazorDemos.Data
+@*@using RadzenBlazorDemos.Data
 @using RadzenBlazorDemos.Models.Northwind
 @using RadzenBlazorDemos.Shared;
-@using Microsoft.EntityFrameworkCore;
+@using Microsoft.EntityFrameworkCore;*@
 
 
-@inherits DbContextPage
+@*@inherits DbContextPage*@
 
 
 <PageTitle>Index</PageTitle>
