--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/ItemList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/ItemList.razor
@@ -5,12 +5,11 @@
 @using Kooco.Pikachu.Items
 @using Kooco.Pikachu.Localization
 @using Microsoft.Extensions.Localization
-@using Kooco.Pikachu.Items
 @using Volo.Abp
 @using Volo.Abp.AspNetCore.Components.Web
 
 @inject IStringLocalizer<PikachuResource> L
-
+@inject NavigationManager NavigationManager
 @inject AbpBlazorMessageLocalizerHelper<PikachuResource> LH
 
 @inherits AbpCrudPageBase<IItemAppService,
@@ -18,7 +17,7 @@
                             Guid,
                             PagedAndSortedResultRequestDto,
                             CreateUpdateItemDto>
-
+                            `1
 
 <Card>
     <CardHeader>
@@ -27,10 +26,11 @@
                 <h2>@L["Items"]</h2>
             </Column>
             <Column ColumnSize="ColumnSize.IsAuto">
-                <Button Color="Color.Primary"
-                        Clicked="OpenCreateModalAsync">
-                    @L["New Item"]
-                </Button>
+                <Button Color="Color.Primary" Type="ButtonType.Link" To="Items/New">@L["NewItem"]</Button>
+                @*<Button Color="Color.Primary"
+                Clicked="OpenCreateModalAsync">
+                @L["New Item"]
+                </Button>*@
             </Column>
         </Row>
     </CardHeader>
@@ -42,6 +42,16 @@
                   ShowPager="true"
                   PageSize="PageSize">
             <DataGridColumns>
+                <DataGridEntityActionsColumn TItem="ItemDto" @ref="@EntityActionsColumn">
+                    <DisplayTemplate>
+                        <EntityActions TItem="ItemDto" EntityActionsColumn="@EntityActionsColumn">
+                            <EntityAction TItem="ItemDto"
+                                          Text="@L["Edit"]"
+                                          Clicked="() => GoToEditPage(context)" />
+                        </EntityActions>
+                    </DisplayTemplate>
+                </DataGridEntityActionsColumn>
+
                 <DataGridColumn TItem="ItemDto"
                                 Field="@nameof(ItemDto.ItemName)"
                                 Caption="@L["Name"]"></DataGridColumn>
@@ -69,7 +79,14 @@
     </CardBody>
 </Card>
 
-<Modal @ref="@CreateModal">
+@code {
+    private void GoToEditPage(ItemDto item)
+    {
+        NavigationManager.NavigateTo($"Items/{item.Id}");
+    }
+}
+
+@*<Modal @ref="@CreateModal">
     <ModalBackdrop />
     <ModalContent IsCentered="true">
         <Form>
@@ -88,7 +105,7 @@
                                 </Feedback>
                             </TextEdit>
                         </Field>
-                    </Validation>           
+                    </Validation>
                     <Field>
                         <FieldLabel>@L["SKU"]</FieldLabel>
                         <TextEdit @bind-Date="@NewEntity.SKU" />
@@ -113,4 +130,4 @@
             </ModalFooter>
         </Form>
     </ModalContent>
-</Modal>
+</Modal>*@
