--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
@@ -1,4 +1,4 @@
-﻿@page "/ItemList"
+﻿@page "/Items"
 
 @using Volo.Abp.Application.Dtos
 @using Kooco.Pikachu.Items.Dtos
@@ -17,8 +17,6 @@
                             Guid,
                             PagedAndSortedResultRequestDto,
                             CreateUpdateItemDto>
-                            `1
-
 <Card>
     <CardHeader>
         <Row Class="justify-content-between">
