--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -97,7 +97,7 @@
         </Validations>
     </CardBody>
     <CardFooter>
-        <Button Color="Color.Secondary" Type="ButtonType.Link" To="ItemList" Class="mr-3">
+        <Button Color="Color.Secondary" Type="ButtonType.Link" To="Items" Class="mr-3">
             @L["Cancel"]
         </Button>
         <Button Color="Color.Primary" Type="@ButtonType.Submit" PreventDefaultOnSubmit="true" Clicked="CreateEntityAsync">
