--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -45,41 +45,19 @@
                     <Validation MessageLocalizer="@LH.Localize">
                         <Field>
                             <FieldLabel>@L["Price"]</FieldLabel>
-                            <TextEdit @bind-value="@NewEntity.SellingPrice">
-                                <Feedback>
-                                    <ValidationError />
-                                </Feedback>
-                            </TextEdit>
+                            <input @bind="NewEntity.SellingPrice" type="number" class="form-control" />
+                            <ValidationError />
                         </Field>
                     </Validation>
                 </Div>
-                <Div Class="col-6">
-                    <Validation MessageLocalizer="@LH.Localize">
-                        <Field>
-                            <FieldLabel>@L["ItemNo"]</FieldLabel>
-                            <TextEdit @bind-value="@NewEntity.ItemNo" />
-                        </Field>
-                    </Validation>
-                </Div>
-            </Div>
-            <Div Class="col-12 row">
                 <Div Class="col-6">
                     <Validation MessageLocalizer="@LH.Localize">
                         <Field>
                             <FieldLabel>@L["OpeningStock"]</FieldLabel>
-                            <TextEdit @bind-value="@NewEntity.OpeningStock">
-                                <Feedback>
-                                    <ValidationError />
-                                </Feedback>
-                            </TextEdit>
+                            <input @bind="NewEntity.OpeningStockValue" type="number" class="form-control" />
+                            <ValidationError />
                         </Field>
                     </Validation>
-                </Div>
-                <Div Class="col-6">
-                    <Field>
-                        <FieldLabel>@L["Description"]</FieldLabel>
-                        <TextEdit @bind-value="@NewEntity.ItemDescription" />
-                    </Field>
                 </Div>
             </Div>
             <Div Class="col-12 row">
@@ -92,6 +70,10 @@
                     </Validation>
                 </Div>
                 <Div Class="col-6">
+                    <Field>
+                        <FieldLabel>@L["Description"]</FieldLabel>
+                        <TextEdit @bind-value="@NewEntity.ItemDescription" />
+                    </Field>
                 </Div>
             </Div>
         </Validations>
