--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -14,7 +14,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kooco.Pikachu.Blazor</title>
+    <title>電商3.0</title>
     <base href="~/" />
     
     <abp-style-bundle name="@BlazorLeptonXLiteThemeBundles.Styles.Global" />
