Commit for Item List UI

--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
@@ -17,15 +17,81 @@
                             Guid,
                             PagedAndSortedResultRequestDto,
                             CreateUpdateItemDto, UpdateItemDto>
+
+<style>
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 49px;
+        height: 23px;
+    }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 18px;
+            width: 18px;
+            left: 3px;
+            bottom: 3px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+    input:checked + .slider {
+        background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+    /* Rounded sliders */
+    .slider.round {
+        border-radius: 34px;
+    }
+
+        .slider.round:before {
+            border-radius: 50%;
+        }
+</style>
 <Card>
     <CardHeader>
-        <Row Class="justify-content-between">
-            <Column ColumnSize="ColumnSize.IsAuto">
-                <h2>@L["Items"]</h2>
-            </Column>
-            <Column ColumnSize="ColumnSize.IsAuto">
+        <Row>
+            <Div Class="col-6">
+                <Column ColumnSize="ColumnSize.Is6">
+                    <h3>@L["Items"]</h3>
+                </Column>
+            </Div>
+            <Div Class="col-6" Style="text-align: end;">
+                <Button Color="Color.Info" Type="ButtonType.Link">@L["CopyItem"]</Button>
+                <Button Color="Color.Danger" Type="ButtonType.Link">@L["DeleteItem"]</Button>
                 <Button Color="Color.Primary" Type="ButtonType.Link" To="Items/New">@L["NewItem"]</Button>
-            </Column>
+            </Div>
         </Row>
     </CardHeader>
     <CardBody>
@@ -36,40 +102,45 @@
                   ShowPager="true"
                   PageSize="PageSize">
             <DataGridColumns>
-                <DataGridEntityActionsColumn TItem="ItemDto" @ref="@EntityActionsColumn">
-                    <DisplayTemplate>
-                        <EntityActions TItem="ItemDto" EntityActionsColumn="@EntityActionsColumn">
-                            <EntityAction TItem="ItemDto"
-                                          Text="@L["Edit"]"
-                                          Clicked="() => GoToEditPage(context)" />
-                            <EntityAction TItem="ItemDto"
-                                          Text="@L["Delete"]"
-                                          Clicked="() => DeleteEntityAsync(context)"
-                                          ConfirmationMessage="() => GetDeleteConfirmationMessage(context)" />
-                        </EntityActions>
-                    </DisplayTemplate>
-                </DataGridEntityActionsColumn>
+                @*<DataGridEntityActionsColumn TItem="ItemDto" @ref="@EntityActionsColumn">
+                <DisplayTemplate>
+                <EntityActions TItem="ItemDto" EntityActionsColumn="@EntityActionsColumn">
+                <EntityAction TItem="ItemDto"
+                Text="@L["Edit"]"
+                Clicked="() => GoToEditPage(context)" />
+                <EntityAction TItem="ItemDto"
+                Text="@L["Delete"]"
+                Clicked="() => DeleteEntityAsync(context)"
+                ConfirmationMessage="() => GetDeleteConfirmationMessage(context)" />
+                </EntityActions>
+                </DisplayTemplate>
+                </DataGridEntityActionsColumn>*@
 
+                <DataGridColumn TItem="ItemDto"
+                                Field="@nameof(ItemDto.Returnable)"
+                                Caption="">
+                    <DisplayTemplate>
+                        <input type="checkbox" />
+                    </DisplayTemplate>
+                </DataGridColumn>
                 <DataGridColumn TItem="ItemDto"
                                 Field="@nameof(ItemDto.ItemName)"
                                 Caption="@L["Name"]"></DataGridColumn>
-                <DataGridColumn TItem="ItemDto"
-                                Field="@nameof(ItemDto.ItemDescription)"
-                                Caption="@L["Description"]">
-                </DataGridColumn>
-                <DataGridColumn TItem="ItemDto"
-                                Field="@nameof(ItemDto.SellingPrice)"
-                                Caption="@L["SellingPrice"]">
-                </DataGridColumn>
-                <DataGridColumn TItem="ItemDto"
-                                Field="@nameof(ItemDto.SKU)"
-                                Caption="@L["SKU"]">
-                </DataGridColumn>
                 <DataGridColumn TItem="ItemDto"
                                 Field="@nameof(ItemDto.CreationTime)"
                                 Caption="@L["CreationTime"]">
                     <DisplayTemplate>
                         @context.CreationTime.ToLongDateString()
+                    </DisplayTemplate>
+                </DataGridColumn>
+                <DataGridColumn TItem="ItemDto"
+                                Field="@nameof(ItemDto.isFreeShipping)"
+                                Caption="@L["TurnItemOn"]">
+                    <DisplayTemplate>
+                        <label class="switch">
+                            <input type="checkbox" checked>
+                            <span class="slider round"></span>
+                        </label>
                     </DisplayTemplate>
                 </DataGridColumn>
             </DataGridColumns>
