Create item changes

--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
@@ -134,7 +134,7 @@
                     </DisplayTemplate>
                 </DataGridColumn>
                 <DataGridColumn TItem="ItemDto"
-                                Field="@nameof(ItemDto.isFreeShipping)"
+                                Field="@nameof(ItemDto.IsFreeShipping)"
                                 Caption="@L["TurnItemOn"]">
                     <DisplayTemplate>
                         <label class="switch">
