--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -16,8 +16,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>電商3.0</title>
     <base href="~/" />
-    
+
+    <link href="~/libs/blazorise/css/material.css" rel="stylesheet" />
+    <link href="~/libs/blazorise/css/material.min.css" rel="stylesheet" />
+    <link href="~/libs/ant-design-blazor/_content/antdesign/css/ant-design-blazor.min.css" rel="stylesheet" />
+    <link href="~/libs/ant-design-blazor/_content/antdesign/css/ant-design-blazor.css" rel="stylesheet" />
     <abp-style-bundle name="@BlazorLeptonXLiteThemeBundles.Styles.Global" />
+    <script src="~/libs/blazorise/js/material.min.js"></script>
+    <script src="~/libs/blazorise/js/material.js"></script>
+    <script src="~/libs/ant-design-blazor/_content/antdesign/js/ant-design-blazor.min.js"></script>
+    <script src="~/libs/ant-design-blazor/_content/antdesign/js/ant-design-blazor.js"></script>
 </head>
 <body class="abp-application-layout bg-light @rtl">
 
