--- a/src/Kooco.Pikachu.Blazor/Pages/Index.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Index.razor
@@ -2,7 +2,7 @@
 @using Volo.Abp.MultiTenancy
 @inherits PikachuComponentBase
 @inject AuthenticationStateProvider AuthenticationStateProvider
-<link href="libs/ant-design-blazor/_content/antdesign/css/ant-design-blazor.css" rel="stylesheet" />
+@*<link href="libs/ant-design-blazor/_content/antdesign/css/ant-design-blazor.css" rel="stylesheet" />*@
 
 <div class="container">
     <div class="p-5 text-center">
