--- a/src/Kooco.Pikachu.Blazor/Pages/PikachuLeptonThemeBrandingComponment.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/PikachuLeptonThemeBrandingComponment.razor
@@ -1,8 +1,5 @@
-﻿@using Volo.Abp.AspNetCore.Components.Web.LeptonXLiteTheme.Themes.LeptonXLite;
-@using Volo.Abp.DependencyInjection
+﻿@using Volo.Abp.DependencyInjection
 
-@inherits Branding
-@attribute [ExposeServices(typeof(Branding))]
 @attribute [Dependency(ReplaceServices = true)]
 
 <div class="container-fluid" style="background-image: url('images/logo/logo.png');
