--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -1,8 +1,8 @@
 ﻿@page "/"
 @namespace Kooco.Pikachu.Blazor.Pages
 @using System.Globalization
-@using Volo.Abp.AspNetCore.Components.Web.LeptonXLiteTheme.Themes.LeptonXLite
-@using Volo.Abp.AspNetCore.Components.Server.LeptonXLiteTheme.Bundling
+@using Lsw.Abp.AspnetCore.Components.Server.AntDesignTheme.Bundling;
+@using Lsw.Abp.AspnetCore.Components.Web.AntDesignTheme.Themes.AntDesignTheme;
 @using Volo.Abp.Localization
 @{
     Layout = null;
@@ -16,8 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>電商3.0</title>
     <base href="~/" />
-    
-    <abp-style-bundle name="@BlazorLeptonXLiteThemeBundles.Styles.Global" />
+
+        <abp-style-bundle name="@BlazorAntDesignThemeBundles.Styles.Global" />
 </head>
 <body class="abp-application-layout bg-light @rtl">
 
@@ -34,6 +34,6 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <abp-script-bundle name="@BlazorLeptonXLiteThemeBundles.Scripts.Global" />
+    <abp-script-bundle name="@BlazorAntDesignThemeBundles.Scripts.Global" />
 </body>
 </html>
