--- a/src/Kooco.Pikachu.Blazor/_Imports.razor
+++ b/src/Kooco.Pikachu.Blazor/_Imports.razor
@@ -7,7 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Kooco.Pikachu.Blazor
-@using Blazorise
-@using Blazorise.DataGrid
-@using Volo.Abp.BlazoriseUI
-@using Volo.Abp.BlazoriseUI.Components
+@using AntDesign
+@using Lsw.Abp.AntDesignUI
+@using Lsw.Abp.AntDesignUI.Components
+@using Lsw.Abp.AspnetCore.Components.Web.AntDesignTheme.Layout
