--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -18,7 +18,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>電商3.0</title>
     <base href="~/" />
-
+    <link href="~/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/libs/bootstrap/css/bootstrap.rtl.min.css" rel="stylesheet" />
+    <script src="~/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <abp-style-bundle name="@BlazorAntDesignThemeBundles.Styles.Global" />
 </head>
 <body class="abp-application-layout bg-light @rtl">
